--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "description": "A Hugo theme for young start-ups, product launches, and »coming soon«-websites. Includes contact form & newsletter sign up via Netlify.",
   "main": "postcss.config.js",
+  "type": "module",
   "scripts": {
     "test": "prettier --check . ",
     "format": "prettier --write . "
@@ -23,13 +24,13 @@
   },
   "homepage": "https://github.com/janraasch/hugo-product-launch#readme",
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^2.3.0",
-    "@tailwindcss/typography": "^0.2.0",
-    "autoprefixer": "^9.8.6",
-    "postcss-cli": "^7.1.1",
-    "postcss-import": "^12.0.1",
-    "prettier": "^2.1.0",
-    "prettier-plugin-go-template": "0.0.9",
-    "tailwindcss": "^1.6.2"
+    "@fullhuman/postcss-purgecss": "^7.0.2",
+    "@tailwindcss/typography": "^0.5.10",
+    "autoprefixer": "^10.4.17",
+    "postcss-cli": "^11.0.0",
+    "postcss-import": "^16.0.1",
+    "prettier": "^3.2.5",
+    "prettier-plugin-go-template": "^0.0.15",
+    "tailwindcss": "^3.4.1"
   }
 }
