--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,10 @@
 # See https://gohugo.io/hosting-and-deployment/hosting-on-netlify/#configure-hugo-version-in-netlify
 [build]
-command = "hugo --gc --minify -b $URL"
 publish = "public"
+command = "hugo --gc --minify"
 
 [build.environment]
-HUGO_VERSION = "0.74.3"
+HUGO_VERSION = "0.145.0"
 HUGO_ENABLEGITINFO = "true"
 
 [context.production.environment]
