--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "description": "A Hugo theme for young start-ups, product launches, and »coming soon«-websites. Includes contact form & newsletter sign up via Netlify.",
   "main": "postcss.config.js",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "test": "prettier --check . ",
     "format": "prettier --write . "
