--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "description": "A Hugo theme for young start-ups, product launches, and »coming soon«-websites. Includes contact form & newsletter sign up via Netlify.",
   "main": "postcss.config.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "test": "prettier --check . ",
     "format": "prettier --write . "
@@ -24,11 +24,11 @@
   },
   "homepage": "https://github.com/janraasch/hugo-product-launch#readme",
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^5.0.0",
+    "@fullhuman/postcss-purgecss": "^4.1.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "postcss-cli": "^10.1.0",
-    "postcss-import": "^15.1.0",
-    "tailwindcss": "^3.2.7"
+    "postcss-cli": "^8.3.1",
+    "postcss-import": "^14.1.0",
+    "tailwindcss": "^2.2.19"
   }
 }
