--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/janraasch/hugo-product-launch#readme",
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^4.1.3",
+    "@tailwindcss/typography": "^0.4.1",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "postcss-cli": "^8.3.1",
