--- a/netlify.toml
+++ b/netlify.toml
@@ -5,11 +5,11 @@ command = "hugo --gc --minify"
 
 [build.environment]
 HUGO_VERSION = "0.145.0"
-NODE_VERSION = "18"
-HUGO_ENABLEGITINFO = "true"
+NODE_VERSION = "20.11.1"
 
 [context.production.environment]
 HUGO_ENV = "production"
+HUGO_ENABLEGITINFO = "true"
 
 [context.deploy-preview]
 command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
@@ -62,3 +62,10 @@ command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
   from = "/.well-known/2210_gx_participant_Materna.json"
   to = "/Registration_ParticipantMaterna.json"
   status = 200
+
+[[plugins]]
+  package = "@netlify/plugin-lighthouse"
+
+[dev]
+  framework = "hugo"
+  targetPort = 1313
